main deploy, fixed layout bug

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -223,7 +223,8 @@ main {
         align-items: center;
         padding: 1em;
         box-shadow: 0px 0px 8px #6e6e6e;
-        position: fixed;
+        position: relative;
+        top: 0;
         z-index: 100;
 
         svg {
@@ -356,7 +357,7 @@ main {
         min-height: 100vh;
         position: fixed;
         left: 100%;
-        top: 3.8em;
+        top: 3.5em;
         font-size: 1.3rem;
         width: 80%;
         background-color: #ffffff;
@@ -401,8 +402,8 @@ main {
 
     //MAIN
     main {
-        position: fixed;
-        margin-top: 6em;
+        // position: fixed;
+        margin-top: 2em;
 
         .card-one {
             flex-direction: column;
@@ -415,7 +416,7 @@ main {
                 padding: 20px 0;
 
                 h3 {
-                    font-size: 2rem;
+                    font-size: 1.7rem;
                 }
 
                 p {
@@ -436,7 +437,7 @@ main {
                 padding: 20px 0;
 
                 h3 {
-                    font-size: 2rem;
+                    font-size: 1.7rem;
                 }
 
                 p {
